# torch-ngp

./: .gitignore  .gitmodules  README.md  activation.py  colmap2nerf.py  encoding.py  environment.yml  gui_nerf.py  llff2nerf.py  loss.py  main_CCNeRF.py  main_dnerf.py  main_nerf.py  main_nerf_mask.py  main_sdf.py  main_tensoRF.py  main_tensorf.py  netowrk.py  provider.py  readme.md  req.txt  requirements.txt  requirements.yml  run.sh  run_sdf.sh  tanks2nerf.py  test_hash.py  test_nerf.py  test_sdf.py  train_nerf.py  train_nerf_3dfront.sh  train_nerf_mask_3dfront.sh  train_sdf.py  utils.py
assets/: gallery.md  update_logs.md
configs/: Realsense_dataset_straight_road.config
data/village_test/: transforms.json
dnerf/: gui.py  network.py  network_basis.py  network_hyper.py  provider.py  renderer.py  utils.py
ffmlp/: __init__.py  backend.py  ffmlp.py
ffmlp/src/: bindings.cpp  cutlass_matmul.h  ffmlp.cu  ffmlp.h  utils.h
gridencoder/: backend.py  grid.py
gridencoder/src/: gridencoder.cu  gridencoder.h
hashencoder/: __init__.py  backend.py  encoder.py  hashgrid.py
hashencoder/src/: bindings.cpp  hashencoder.cpp  hashencoder.cu  hashencoder.h  utils.h
nerf/: clip_utils.py  gui.py  mask_renderer.py  network.py  network_ff.py  network_mask.py  network_tcnn.py  provider.py  renderer.py  utils.py
nodes/data_publisher/: CMakeLists.txt  package.xml
nodes/data_publisher/src/: data_publisher.py
nodes/slam_subscriber/: CMakeLists.txt  package.xml
nodes/slam_subscriber/src/: slam_subscriber.py
orb_slam_2_ros/: .gitignore  CMakeLists.txt  Dependencies.md  README.md  package.xml
orb_slam_2_ros/docker/kinetic/: Dockerfile
orb_slam_2_ros/docker/melodic/: Dockerfile
orb_slam_2_ros/orb_slam2/config/: TUM2.yaml
orb_slam_2_ros/orb_slam2/include/: BoostArchiver.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  Map.h  MapPoint.h  Sim3Solver.h  System.h  Tracking.h
orb_slam_2_ros/orb_slam2/src/: KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  System.cc  Tracking.cc
orb_slam_2_ros/ros/config/: dynamic_reconfigure.cfg  rviz_config.rviz
orb_slam_2_ros/ros/include/: MonoNode.h  Node.h  RGBDNode.h  StereoNode.h
orb_slam_2_ros/ros/launch/: orb_slam2_d435_mono.launch  orb_slam2_d435_rgbd.launch  orb_slam2_mynteye_s_mono.launch  orb_slam2_mynteye_s_stereo.launch  orb_slam2_r200_mono.launch  orb_slam2_r200_rgbd.launch  orb_slam2_r200_stereo.launch  orb_slam2_tum2_rgbd.launch  orb_slam2_zed2_stereo.launch
orb_slam_2_ros/ros/src/: MonoNode.cc  Node.cc  RGBDNode.cc  StereoNode.cc
orb_slam_2_ros/srv/: SaveMap.srv
raymarching/: __init__.py  backend.py  raymarching.py
raymarching/src/: bindings.cpp  pcg32.h  raymarching.cpp  raymarching.cu  raymarching.h
scripts/: colmap2nerf.py  hyper2nerf.py  install_ext.sh  llff2nerf.py  run_ccnerf.sh  run_dnerf.sh  run_gui_nerf.sh  run_gui_nerf_clip.sh  run_gui_tensoRF.sh  run_nerf.sh  run_sdf.sh  run_tensoRF.sh  run_tensorf.sh  tanks2nerf.py
sdf/: netowrk.py  netowrk_ff.py  network_tcnn.py  provider.py  utils.py
shencoder/: backend.py  sphere_harmonics.py
shencoder/src/: shencoder.cu  shencoder.h
tensoRF/: network.py  network_cc.py  network_cp.py  utils.py
tensorf/: network.py  provider.py  utils.py
testing/: test_ffmlp.py  test_hashencoder.py  test_hashgrid_grad.py  test_shencoder.py
torch-ngp/: main_CCNeRF.py  requirements.txt
torch-ngp/ffmlp/src/: cutlass_matmul.h
torch-ngp/nerf/: provider.py
torch-ngp/scripts/: install_ext.sh  run_gui_nerf.sh  run_nerf.sh
torch-ngp/sdf/: netowrk_ff.py  network_tcnn.py
torch-ngp/test_install/: log_ngp.txt
torch_ngp/assets/: update_logs.md
torch_ngp/ffmlp/: backend.py  setup.py
torch_ngp/ffmlp/src/: ffmlp.cu
torch_ngp/nerf/: gui.py  network_ff.py
torch_ngp/scripts/: colmap2nerf.py  llff2nerf.py  run_ccnerf.sh  run_dnerf.sh  run_gui_tensoRF.sh
torch_ngp/sdf/: utils.py
torch_ngp/testing/: test_raymarching.py  test_shencoder.py
